Kind of fix docker